<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagenPerfil"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/img">

            </de.hdodenhof.circleimageview.CircleImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="3dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/nombrePersona"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nombrePersona"
                            android:textColor="@color/teal_700"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:id="@+id/asuntoMensaje"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textStyle="bold"
                            android:text="@string/AsuntoMensaje">

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:textAlignment="center"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:paddingHorizontal="8dp">

                        <TextView
                            android:id="@+id/horaMensaje"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="1dp"
                            android:text="@string/horaMensaje"
                            android:textColor="@color/gray"/>

                        <ImageView
                            android:id="@+id/iconoImageView"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:paddingLeft="1dp"
                            android:paddingRight="1dp"
                            android:outlineAmbientShadowColor="@color/gray"
                            android:outlineSpotShadowColor="@color/gray"
                            android:src="@drawable/outline_star_24" />
                    </LinearLayout>

                </RelativeLayout>
                <TextView
                    android:id="@+id/ultimoMensaje"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:textSize="12dp"
                    android:text="@string/mensaje" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>